made chapter font size smaller on mobile. fixed tooltip not poping up in nav modal error

--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,10 @@
     cursor: pointer;
 }
 
+#modalTooltip {
+    cursor: pointer;
+}
+
 #tipsLink {
     font-size: 90%;
     text-decoration: underline;
